--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
+    "react-rating-stars-component": "^2.2.0",
     "tailwindcss": "3.3.3",
     "truffle": "^5.11.5",
     "truffle-contract": "^4.0.31",
