--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
+    "bootstrap": "^5.3.3",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "fs": "^0.0.1-security",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
-    "react-bootstrap": "^2.8.0",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "18.2.0",
     "react-rating-stars-component": "^2.2.0",
     "tailwindcss": "3.3.3",
