--- a/package.json
+++ b/package.json
@@ -24,10 +24,15 @@
     "react-bootstrap": "^2.10.1",
     "react-dom": "18.2.0",
     "react-rating-stars-component": "^2.2.0",
+    "react-star-rating": "^1.4.2",
+    "react-star-ratings": "^2.3.0",
     "tailwindcss": "3.3.3",
     "truffle": "^5.11.5",
     "truffle-contract": "^4.0.31",
     "typescript": "5.2.2",
     "web3": "^4.1.1"
+  },
+  "devDependencies": {
+    "@types/react-star-ratings": "^2.3.3"
   }
 }
